# Waffle

./: .gitignore  Cargo.toml  README.md  beatmap_client_ver.go  beatmap_importer.go  client.7z  database.sql  docker-compose.yml  get_additional_beatmap_data.go  go.mod  go.sum  initial_diff_calc_eyup.go  main.go  osu_mover.go  osz_renamer.go  service.go  web_server.go
api/: waffle_login.go  waffle_site_register.go
bancho/: bancho.go  bancho_service_handler.go
common/: achievements.go  client_manager.go  client_type.go  packet_queue.go
config/: config.go  config_reader.go  config_warnings.go  waffle_api_settings.go
database/: beatmap_comments.go  beatmap_favourites.go  beatmap_offsets.go  beatmap_ratings.go  beatmaps.go  beatmapsets.go  database.go  friends.go  irc_log.go  match_history.go  migrations.go  osu_achievements.go  scores.go  screenshots.go  site_tokens.go  updates.go  user.go  userStats.go  user_stats.go  users.go
helpers/: accuracy_calculator.go  bancho_reader.go  formatting.go  level_calculator.go  logger.go  time_formatter.go
irc/: irc_ssl.go
logger/: logger.go
migrations/: 20231130173518_initial_migration.sql
scheduler/: job_scheduler.go
site/: common_site.templ  index.templ  index_templ.go  layout.templ  package-lock.json  package.json
stream/: arcade_auth.go  arcade_link.go  arcade_token.go
utils/: achievements.go  client_manager.go  osu_file_versioning.go
waffle/: bancho.go  client.go  worker.go
web/: achievement_images.go  admin_post.go  admin_post_success_updater.html  admin_setup.go  admin_setup_updater.html  browser_screenshot.go  get-screenshot.go  osu-osz2-getscores.go  osu-screenshot.go  osu-submit-modular.go  osu-title-image.go  osu-update2.go  server.go  (+29 more)
(+370 files in other folders)
